# tsp

./: .gitignore  README.md  package.json  post_message_examples.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: lint.yml  ptest.yml  test.yml
app/: gen_qubo.py  main.py
app/endpoints/: qubo.py  ui.py
app/static/css/: input.css  output.css
app/static/style/: confirm_modal.css  shared.css
app/templates/: base.html  config_modal.html  description.html  platform_mockup.html  solution_modal.html  traveling-salesperson-problem.html
tests/: test_api.py
